--- a/Experiments/requirements.txt
+++ b/Experiments/requirements.txt
@@ -1,9 +1,13 @@
 pandas==2.2.1
-numpy==1.26.45
+numpy==1.26.4
 spicy==0.16.0
-torch==2.2.1+cu121
+torch==2.2.1
 torchsummary==1.5.1
-torchvision==0.17.1+cu121
+torchvision==0.17.1
 matplotlib==3.8.0
 tqdm==4.65.0
 psutil==5.9.0
+firebase_admin
+flask_cors
+asyncio
+aioelectricitymaps
