--- a/web/react-app/package.json
+++ b/web/react-app/package.json
@@ -2,6 +2,7 @@
   "name": "react-app",
   "version": "0.1.0",
   "private": true,
+  "proxy": "http://localhost:5000",
   "dependencies": {
     "@kurkle/color": "^0.3.2",
     "@testing-library/jest-dom": "^5.17.0",
@@ -10,11 +11,13 @@
     "axios": "^1.6.8",
     "chart.js": "^4.4.2",
     "http-proxy-middleware": "^3.0.0",
+    "jquery": "^3.7.1",
     "react": "^18.2.0",
     "react-chartjs-2": "^5.2.0",
     "react-dom": "^18.2.0",
     "react-router-dom": "^5.3.4",
     "react-scripts": "5.0.1",
+    "react-simple-maps": "^3.0.0",
     "recharts": "^2.12.7",
     "web-vitals": "^2.1.4"
   },
