--- a/Experiments/Dockerfile
+++ b/Experiments/Dockerfile
@@ -1,5 +1,4 @@
-# Use an official NVIDIA CUDA runtime as a parent image
-# FROM nvidia/cuda:12.1.0-base-ubuntu20.04
+# Use an official NVIDIA CUDA runtime with cuDNN as a parent image
 FROM nvidia/cuda:12.1.0-cudnn8-runtime-ubuntu22.04
 
 # Set the working directory in the container
@@ -7,34 +6,27 @@ WORKDIR /usr/src/app
 
 # Install system dependencies
 RUN apt-get update && \
-    apt-get install -y software-properties-common && \
+    apt-get install -y software-properties-common sudo gcc python3-dev python3-pip && \
     add-apt-repository ppa:graphics-drivers/ppa --yes && \
     apt-get update && \
-    apt-get install -y sudo gcc python3-dev && \
+    apt-get install -y && \
+    pip3 install --upgrade pip && \
     rm -rf /var/lib/apt/lists/*
 
-# Copy the current directory contents into the container at /usr/src/app
+# Copy the requirements file and install Python dependencies
+COPY requirements.txt .
+# RUN pip3 install --no-cache-dir -r requirements.txt --verbose
+RUN pip3 install --no-cache-dir --ignore-installed -r requirements.txt --verbose
+# Copy the rest of the application
 COPY . .
 
-# Install Python and pip
-RUN apt-get update && apt-get install -y python3-pip python3 && \
-    apt-get remove python3-blinker -y && \
-    pip3 install --upgrade pip
-
-# Install any needed packages specified in requirements.txt 
-RUN pip install --no-cache-dir -r requirements.txt --verbose
-RUN pip install aioelectricitymaps
-COPY . . 
 # Make port 80 available to the world outside this container
 EXPOSE 80
 
-# Define environment variable
-ENV NAME World
-
-# Use the official NVIDIA runtime as the base image
+# Set NVIDIA environment variables
 ENV NVIDIA_VISIBLE_DEVICES all
 ENV NVIDIA_DRIVER_CAPABILITIES compute,utility
 
 # Run train.py when the container launches
-CMD ["python", "VGGNet/train.py", "--epoch", "100", "--lr", "0.001", "--batch", "8", "--vgg_model", "VGG16", "--cuda", "0", "--step_size", "30", "--gamma", "0.1", "--resumption", "0", "--ssh_server", "0", "--threshold", "250"]
-# docker run -it --gpus all  python carbon_test VGGNet/train.py --epoch 100 --lr 0.001 --batch 8 --vgg_model VGG16 --cuda 0 --step_size 30 --gamma 0.1 --resumption 0 --ssh_server 0 --threshold 250
+CMD ["python3", "VGGNet/train.py"]
+# CMD ["python3", "VGGNet/train.py", "--epoch", "100", "--lr", "0.001", "--batch", "8", "--vgg_model", "VGG16", "--cuda", "0", "--step_size", "30", "--gamma", "0.1", "--resumption", "0", "--ssh_server", "0", "--threshold", "250"]
