--- a/web/react-app/package.json
+++ b/web/react-app/package.json
@@ -12,12 +12,13 @@
     "chart.js": "^4.4.2",
     "http-proxy-middleware": "^3.0.0",
     "jquery": "^3.7.1",
-    "react": "^18.2.0",
+    "react": "^18.3.1",
     "react-chartjs-2": "^5.2.0",
-    "react-dom": "^18.2.0",
+    "react-dom": "^18.3.1",
     "react-router-dom": "^5.3.4",
     "react-scripts": "5.0.1",
     "react-simple-maps": "^3.0.0",
+    "react-svg-worldmap": "^2.0.0-alpha.16",
     "recharts": "^2.12.7",
     "web-vitals": "^2.1.4"
   },
